fixed header - alignment

--- a/src/components/Ui/Header/Header.module.scss
+++ b/src/components/Ui/Header/Header.module.scss
@@ -29,6 +29,8 @@
     &__nav{
 
         & ul{
+            position: relative;
+            transform: translateY(1.2rem);
             list-style-type: none;
             width: 100%;
             display: flex;
